--- a/style.css
+++ b/style.css
@@ -1,7 +1,41 @@
+body{
+  background-color: darkgray;
+  box-sizing: border-box;
+}
+
+h1 {
+  text-align: center;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+#game {
+box-sizing: border-box;
+margin: 50px auto;
+width: max-content;
+display: grid;
+grid-template-columns: repeat(4, 100px);
+gap: 30px;
+}
+
 #game div {
-  border: 1px solid black;
-  width: 15%;
-  height: 200px;
-  margin: 10px;
-  display: inline-block;
+  box-sizing: border-box;
+  border: 5px solid #444444;
+  height: 100px;
+  width: 100%;
+  cursor: pointer;
+  background-color: #111111;
+}
+
+#winner-box{
+  visibility: hidden;
+  box-sizing: border-box;
+  text-align: center;
+  border: 5px solid #444444;
+  width: 400px;
+  padding: 20px;
+  background-color: rgba(144, 238, 144, 0.8);
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translatex(-50%);
 }
