--- a/style.css
+++ b/style.css
@@ -14,17 +14,22 @@ box-sizing: border-box;
 margin: 50px auto;
 width: max-content;
 display: grid;
-grid-template-columns: repeat(4, 100px);
+grid-template-columns: repeat(4, 10em);
 gap: 30px;
 }
 
 #game div {
   box-sizing: border-box;
   border: 5px solid #444444;
-  height: 100px;
+  height: 10em;
   width: 100%;
   cursor: pointer;
   background-color: #111111;
+  transition: transform 0.2s;
+}
+
+#game div:hover{
+  transform: scale(1.1);
 }
 
 #winner-box{
@@ -32,11 +37,29 @@ gap: 30px;
   box-sizing: border-box;
   text-align: center;
   border: 5px solid #444444;
-  width: 400px;
-  padding: 20px;
+  width: 30em;
+  padding: 2em;
   background-color: rgba(144, 238, 144, 0.8);
   position: absolute;
   top: 20%;
   left: 50%;
   transform: translatex(-50%);
+}
+
+#restart {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  background-color: darkgrey;
+  color: #444444;
+  border: 3px solid #444444;
+  padding: 10px;
+  margin: 10px;
+  cursor: pointer;
+  transition: transform 0.2s;
+}
+
+#restart:hover{
+  border: 3px solid #fff;
+  color: #fff;
+  background-color: #444444;
+  transform: scale(1.2);
 }
