--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
 h1 {
   text-align: center;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 5em;
 }
 
 #game {
