--- a/style.css
+++ b/style.css
@@ -37,22 +37,30 @@ gap: 30px;
   visibility: hidden;
   box-sizing: border-box;
   text-align: center;
+  align-items: center;
   border: 5px solid #444444;
-  width: 30em;
+  width: 50%;
   padding: 2em;
   background-color: rgba(144, 238, 144, 0.8);
   position: absolute;
-  top: 20%;
+  top: 10%;
   left: 50%;
   transform: translatex(-50%);
 }
 
+#winner-box h2{
+  font-size: 3em;
+}
+
 #restart {
+  font-size: 1.5em;
+  box-sizing: border-box;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   background-color: darkgrey;
   color: #444444;
   border: 3px solid #444444;
   padding: 10px;
+  width: 80%;
   margin: 10px;
   cursor: pointer;
   transition: transform 0.2s;
