--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ gap: 30px;
   text-align: center;
   align-items: center;
   border: 5px solid #444444;
-  width: 50%;
+  width: 75%;
   padding: 2em;
   background-color: rgba(144, 238, 144, 0.8);
   position: absolute;
@@ -49,19 +49,20 @@ gap: 30px;
 }
 
 #winner-box h2{
-  font-size: 3em;
+  font-size: 4em;
 }
 
 #restart {
   font-size: 1.5em;
   box-sizing: border-box;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 3em;
   background-color: darkgrey;
   color: #444444;
   border: 3px solid #444444;
   padding: 10px;
   width: 80%;
-  margin: 10px;
+  margin: 40px 10px;
   cursor: pointer;
   transition: transform 0.2s;
 }
